# 1D_flame

./: CMakeLists.txt
src/: CMakeLists.txt  config.h  config.h.in  main.cpp  reconstruction.cpp  solver.cpp  solver.h  vtk_writer.cpp  vtk_writer.h
src/Common/: CMakeLists.txt  common.h  common_macros.h  common_string_operations.cpp  common_string_operations.h
src/Data/: nasa_poly.xml
src/Grid/: CMakeLists.txt  grid.cpp  grid.h
src/IO/: CMakeLists.txt  hdf5_writer.cpp  hdf5_writer.h  input.cpp  input.h  vtk_writer.cpp  vtk_writer.h
src/Math/: CMakeLists.txt  poly34.cpp  poly34.h
src/Numerics/: CMakeLists.txt  reconstruction.cpp  reconstruction.h  riemann_solver.cpp  riemann_solver.h
src/Physics/: CMakeLists.txt  PhysicsManager.cpp  PhysicsManager.h  pengrobinson.cpp  pengrobinson.h
src/Solver/: CMakeLists.txt  solver.cpp  solver.h  solver_burgers.cpp  solver_burgers.h  solver_linear_advection.cpp  solver_linear_advection.h  solver_navier_stokes.cpp  solver_navier_stokes.h
